; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_diskio.c_disk_read.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_diskio.c_disk_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RES_ERROR = common dso_local global i32 0, align 4
@RES_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @disk_read(i32 %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %21

12:                                               ; preds = %4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @platform_sdcard_read_block(i32 %13, i32 %14, i32* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %12
  %19 = load i32, i32* @RES_ERROR, align 4
  store i32 %19, i32* %5, align 4
  br label %33

20:                                               ; preds = %12
  br label %31

21:                                               ; preds = %4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %9, align 4
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @platform_sdcard_read_blocks(i32 %22, i32 %23, i32 %24, i32* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %30, label %28

28:                                               ; preds = %21
  %29 = load i32, i32* @RES_ERROR, align 4
  store i32 %29, i32* %5, align 4
  br label %33

30:                                               ; preds = %21
  br label %31

31:                                               ; preds = %30, %20
  %32 = load i32, i32* @RES_OK, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %31, %28, %18
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @platform_sdcard_read_block(i32, i32, i32*) #1

declare dso_local i32 @platform_sdcard_read_blocks(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
